--- a/selfdrive/assets/offroad/tc.html
+++ b/selfdrive/assets/offroad/tc.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>openpilot Terms of Service</title>
+  <title>PilotOne用户协议</title>
   <style type="text/css">
     p {
       margin: 45px 0;
@@ -11,34 +11,34 @@
 </head>
 
 <body>
-  <p>The Terms and Conditions below are effective for all users</p>
-  <p>Last Updated on October 18, 2019</p>
-  <p>Please read these Terms of Use (“Terms”) carefully before using openpilot which is open-sourced software developed by Comma.ai, Inc., a corporation organized under the laws of Delaware (“comma,” “us,” “we,” or “our”).</p>
-  <p><strong>Before using and by accessing openpilot, you indicate that you have read, understood, and agree to these Terms.</strong> These Terms apply to all users and others who access or use openpilot. If others use openpilot through your user account or vehicle, you are responsible to ensure that they only use openpilot when it is safe to do so, and in compliance with these Terms and with applicable law. If you disagree with any part of the Terms, you should not access or use openpilot.</p>
-  <h3 id="communications">Communications</h3>
-  <p>You agree that comma may contact you by email or telephone in connection with openpilot or for other business purposes. You may opt out of receiving email messages at any time by contacting us at support@comma.ai.</p>
-  <p>We collect, use, and share information from and about you and your vehicle in connection with openpilot. You consent to comma accessing the systems associated with openpilot, without additional notice or consent, for the purposes of providing openpilot, data collection, software updates, safety and cybersecurity, suspension or removal of your account, and as disclosed in the Privacy Policy (available at https://connect.comma.ai/privacy).</p>
-  <h3 id="safety">Safety</h3>
-  <p>openpilot performs the functions of Adaptive Cruise Control (ACC) and Lane Keeping Assist System (LKAS) designed for use in compatible motor vehicles. While using openpilot, it is your responsibility to obey all laws, traffic rules, and traffic regulations governing your vehicle and its operation. Access to and use of openpilot is at your own risk and responsibility, and openpilot should be accessed and/or used only when you can do so safely.</p>
-  <p>openpilot does not make your vehicle “autonomous” or capable of operation without the active monitoring of a licensed driver. It is designed to assist a licensed driver. A licensed driver must pay attention to the road, remain aware of navigation at all times, and be prepared to take immediate action. Failure to do so can cause damage, injury, or death.</p>
-  <h3 id="supported-locations-and-models">Supported Locations and Models</h3>
-  <p>openpilot is compatible only with particular makes and models of vehicles. For a complete list of currently supported vehicles, visit https://comma.ai. openpilot will not function properly when installed in an incompatible vehicle. openpilot is compatible only within the geographical boundaries of the United States of America.</p>
-  <h3 id="indemnification">Indemnification</h3>
-  <p><strong>To the maximum extent allowable by law, you agree to defend, indemnify and hold harmless comma, and its employees, partners, suppliers, contractors, investors, agents, officers, directors, and affiliates, from and against any and all claims, damages, causes of action, penalties, interest, demands, obligations, losses, liabilities, costs or debt, additional taxes, and expenses (including but not limited to attorneys’ fees), resulting from or arising out of (i) your use and access of, or inability to use or access, openpilot, (ii) your breach of these Terms, (iii) the inaccuracy of any information, representation or warranty made by you, (iv) activities of anyone other than you in connection with openpilot conducted through your comma device or account, (v) any other of your activities under or in connection with these Terms or openpilot.</strong></p>
-  <h3 id="limitation-of-liability">Limitation of Liability</h3>
-  <p>In no event shall comma, nor its directors, employees, partners, agents, suppliers, or affiliates, be liable for any indirect, incidental, special, consequential or punitive damages, including without limitation, loss of profits, data, use, goodwill, or other intangible losses, resulting from (i) your access to or use of or inability to access or use of the Software; or (ii) any conduct or content of any third party on the Software whether based on warranty, contract, tort (including negligence) or any other legal theory, whether or not we have been informed of the possibility of such damage, and even if a remedy set forth herein is found to have failed of its essential purpose.</p>
-  <h3 id="no-warranty-or-obligations-to-maintain-or-service">No Warranty or Obligations to Maintain or Service</h3>
-  <p>comma provides openpilot without representations, conditions, or warranties of any kind. openpilot is provided on an “AS IS” and “AS AVAILABLE” basis, including with all faults and errors as may occur. To the extent permitted by law and unless prohibited by law, comma on behalf of itself and all persons and parties acting by, through, or for comma, explicitly disclaims all warranties or conditions, express, implied, or collateral, including any implied warranties of merchantability, satisfactory quality, and fitness for a particular purpose in respect of openpilot.</p>
-  <p>To the extent permitted by law, comma does not warrant the operation, performance, or availability of openpilot under all conditions. comma is not responsible for any failures caused by server errors, misdirected or redirected transmissions, failed internet connections, interruptions or failures in the transmission of data, any computer virus, or any acts or omissions of third parties that damage the network or impair wireless service.</p>
-  <p>We undertake reasonable measures to preserve and secure information collected through our openpilot. However, no data collection, transmission or storage system is 100% secure, and there is always a risk that your information may be intercepted without our consent. <em>In using openpilot, you acknowledge that comma is not responsible for intercepted information, and you hereby release us from any and all claims arising out of or related to the use of intercepted information in any unauthorized manner.</em></p>
-  <p>By providing openpilot, comma does not transfer or license its intellectual property or grant rights in its brand names, nor does comma make representations with respect to third-party intellectual property rights.</p>
-  <p>We are not obligated to provide any maintenance or support for openpilot, technical or otherwise. If we voluntarily provide any maintenance or support for openpilot, we may stop any such maintenance, support, or services at any time in our sole discretion.</p>
-  <h3 id="modification-of-software">Modification of Software</h3>
-  <p>In no event shall comma, nor its directors, employees, partners, agents, suppliers, or affiliates, be liable if you choose to modify the software.</p>
-  <h3 id="changes">Changes</h3>
-  <p>We reserve the right, at our sole discretion, to modify or replace these Terms at any time. If a revision is material we will provide at least 15 days’ notice prior to any new terms taking effect. What constitutes a material change will be determined at our sole discretion.</p>
-  <p>By continuing to access or use our Software after any revisions become effective, you agree to be bound by the revised terms. If you do not agree to the new terms, you are no longer authorized to use the Software.</p>
-  <h3 id="contact-us">Contact Us</h3>
-  <p>If you have any questions about these Terms, please contact us at support@comma.ai.</p>
+  <p>以下条款对所有用户生效。</p>
+  <p>2024年1月22日更新。</p>
+  <p>护心果科技是在中国合法注册的公司,Pilotone是护心果科技(以下简称护心果、PilotOne、我们、我们的)旗下的一个基于OP的软件分支。在您使用开源软件PilotOne之前,请您仔细阅读这些使用条款。（用户协议）</p>
+  <p><strong>在使用并访问PilotOne之前,表示阅读、理解并同意这些条款</strong> 这些条款适用于所有访问或使用PilotOne的用户,如果他人通过您的用户账号或使用您的车辆,您有责任确保他们仅在安全的情况下使用PilotOne,并且符合这些条款和适用法律。如果您对条款的任何部分有异议,您不应访问或者使用PilotOne。</p>
+  <h3 id="communications">通讯</h3>
+  <p>如涉及PilotOne或其他业务需要,您同意护心果科技可以通过电子邮件或者电话与您联系。您可以随时选择通过邮件联系我们(support@applegrain.cn),来取消接收电子邮件信息。</p>
+  <p>我们在于PilotOne相关的情景中收集、使用和分享与您及您的车辆有关信息。您同意护心果可以在提供PilotOne、数据收集、软件更新、网络安全的目的下,暂停、删除您的账户。无需额外的通知或者征求您的同意,即可访问与PilotOne相关的系统</p>
+  <h3 id="safety">安全</h3>
+  <p>PilotOne执行自适应巡航控制(ACC)和车道保持辅助系统(LKAS)的功能,旨在用于兼容的车辆。在使用PilotOne时,您有责任遵守所有法律、交通规则和交通法规前提下管理您的车辆及其操作。访问和使用PilotOne完全由您自己承担风险和责任,应仅在您能够安全操作时访问和使用PilotOne。</p>
+  <p>PilotOne不是“自动驾驶”,它旨在协助持有驾驶执照的司机环节疲劳。没有持有驾驶执照的司机不能使用PilotOne。持有驾驶执照的司机必须专注于驾驶,随时保持对道路情况的关注,并准备随时采取紧急行动。未能这样做可能导致损坏、受伤或死亡。</p>
+  <h3 id="supported-locations-and-models">支持的地区和车型</h3>
+  <p>PilotOne仅与特定品牌和型号的车辆兼容。要查看目前支持的车辆的完整列表,请访问 https://applegrain。当安装在不兼容的车辆上时,PilotOne将无法正常工作。PilotOne仅支持在中华人民共和国境内使用。</p>
+  <h3 id="indemnification">保障</h3>
+  <p><strong>在法律允许的最大范围内,您同意针对任何及所有索赔、损害、 由于 (1) 您使用和访问而产生的诉讼原因、罚款、利息、要求、义务、损失、责任、成本或债务、附加税费和开支（包括但不限于律师费） ,或无法使用或访问PilotOne,(2) 您违反了这些条款，(3) 您做出的任何信息、陈述或保证不准确，(iv) 除您以外的任何人通过以下方式进行的与 PilotOne 有关的活动:您的设备或帐户，(v) 您根据本条款使用 PilotOne 进行的或与之相关的任何其他活动。</strong></p>
+  <h3 id="limitation-of-liability">责任限制</h3>
+  <p>在任何情况下,护心果及其董事、员工、合作伙伴、代理商、供应商或关联方对于以下原因导致的任何间接、偶然、特殊、直接或惩罚性损害不承担责任:您访问、使用或无法访问或使用软件所产生的损害;软件上任何第三方的行为或内容所产生的损害。此责任排除条款基于多种法律理论,如保修、合同、侵权(包括疏忽)等。即使我们已被告知可能发生此类损害的可能性,且不论此处规定的补救措施是否被认为未能实现其基本目的,护心果及其相关方仍不承担责任。</p>
+  <h3 id="no-warranty-or-obligations-to-maintain-or-service">免责条款</h3>
+  <p>护心果提供PilotOne,但不作任何形式的声明、条件或保证。PilotOne是在“按现状”和“可获取”的基础上提供的,包括可能出现的所有故障和错误。在法律允许的范围内,除非法律禁止,否则护心果代表其自身以及所有通过为护心果行事的个人和团体明确否认对PilotOne的所有明示或暗示、附带的条件或保证,包括任何关于适销性、满意质量和特定用途适用性的默示保证。</p>
+  <p>在法律允许的范围内,护心果不保证PilotOne在所有条件下的可用性。护心果对因服务器错误、错误导向或重定向传输、互联网连接失败、数据传输中断或失败、任何计算机病毒或第三方的任何行为或疏忽导致网络损坏或无线服务受损不负任何责任。</p>
+  <p>我们采取合理措施保护我们通过PilotOne收集的信息。然而,没有任何数据收集、传输或存储系统是100%安全的,总是存在您的信息可能被拦截的风险,而未经我们同意。在使用PilotOne时,您承认护心果对被拦截的信息不承担责任,并且您特此放弃因以任何未经授权的方式使用被拦截信息而产生与之相关的所有索赔。</em></p>
+  <p>通过提供PilotOne,护心果并未转让或授权其知识产权,也未授予其品牌名称的权利,同时也没有就第三方的知识产权做出任何表示。</p>
+  <p>我们无义务为PilotOne提供任何技术或其他方面的维护或支持。如果我们自愿为PilotOne提供任何维护或支持,我们可能会随时自行决定停止任何此类维护、支持或服务。</p>
+  <h3 id="modification-of-software">修改软件</h3>
+  <p>在任何情况下,如果您选择修改软件,护心果及其董事、员工、合作伙伴、代理商、供应商或关联方均不承担责任。</p>
+  <h3 id="changes">条款修订</h3>
+  <p>我们保留在任何时候自行决定修改或替换这些条款的权利。如果修订是重大的,我们将在新条款生效前至少提前15天通知。什么是重大变更将由我们自行决定。</p>
+  <p>在新的条款生效后,如果您继续访问或使用我们的软件,即表示您同意受修订后的条款约束。如果您不同意新的条款,则不再有权使用该软件。</p>
+  <h3 id="contact-us">联系我们</h3>
+  <p>如果您对这些条款有任何疑问,请通过support@applegrain.cn与我们联系</p>
 </body>
 </html>
